Model.cs calculates win rate and games played for a specific champion. The GUI is functional at a basic level. It includes summoner, region, go, status, overallWin, champions and data. User error handling and cosmetic changes still need to be added.

--- a/MatchupWinRate/MatchupWinRate.csproj
+++ b/MatchupWinRate/MatchupWinRate.csproj
@@ -49,11 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coder.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Gui.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Gui.Designer.cs">
+      <DependentUpon>Gui.cs</DependentUpon>
     </Compile>
     <Compile Include="MatchHistory.cs" />
     <Compile Include="MatchInfo.cs" />
@@ -62,6 +62,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
+    <EmbeddedResource Include="Gui.resx">
+      <DependentUpon>Gui.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
